# OrionEngine

./: .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  codecov.yml  conanfile.py  vcpkg.json
cmake/: AddGitSubmodule.cmake  CPM.cmake  CodeCoverage.cmake  CompilerFlags.cmake  ConfigSafeGuards.cmake  LTO.cmake  OutputFolder.cmake  Sanitizer.cmake  SetSourceGroup.cmake  Tools.cmake  Warnings.cmake
docs/: Doxyfile
scripts/: run-tracy-profiler.bat
src/: CMakeLists.txt
src/ArcEngine/: ArcEngine.h  CMakeLists.txt  aepch.h
src/ArcEngine/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Window.h
src/ArcEngine/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/ArcEngine/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
src/Ember/: CMakeLists.txt  Ember.h
src/Ember/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h
src/OrionEngine/: .clang-tidy  CMakeLists.txt  Orion.h  OrionEngine.h  oepch.h
src/OrionEngine/Core/: Application.cpp  Application.h  Core.h  EntryPoint.h  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Window.h
src/OrionEngine/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/OrionEngine/Orion/: Application.cpp  Application.h  CMakeLists.txt  Core.h  EntryPoint.h  Input.h  KeyCodes.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  MouseCodes.h  OrthographicCameraController.cpp  OrthographicCameraController.h  Window.h
src/OrionEngine/Orion/Core/: Application.cpp  Application.h  CMakeLists.txt  Core.cpp  Core.h  Input.cpp  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Log.cpp  Log.h  Timestep.h  Warnings.h  Window.cpp  Window.h
src/OrionEngine/Orion/Core/Events/: ApplicationEvent.h  CMakeLists.txt  Event.h  KeyEvent.h  MouseEvent.h
src/OrionEngine/Orion/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
src/OrionEngine/Orion/ImGui/: CMakeLists.txt  ImGuiLayer.cpp  ImGuiLayer.h
src/OrionEngine/Orion/Platform/: CMakeLists.txt
src/OrionEngine/Orion/Platform/OpenGL/: CMakeLists.txt  OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLVertexArray.cpp
src/OrionEngine/Orion/Platform/Windows/: CMakeLists.txt  WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
src/OrionEngine/Orion/Profiling/: CMakeLists.txt  Instrumentor.h  MemoryProfiling.cpp  Profiling.h
src/OrionEngine/Orion/Renderer/: Buffer.cpp  Buffer.h  CMakeLists.txt  GraphicsContext.cpp  GraphicsContext.h  OrthographicCamera.cpp  OrthographicCamera.h  RenderCommand.cpp  RenderCommand.h  RenderCommandQueue.cpp  RenderCommandQueue.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h
src/OrionEngine/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLVertexArray.cpp  OpenGLVertexArray.h
src/OrionEngine/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
src/Sandbox/: CMakeLists.txt  ExampleLayer.cpp  ExampleLayer.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
src/Sandbox/assets/shaders/: FlatColor.glsl  Texture.glsl
tools/: run-clang-tidy.py
